[package]
name = "example-rocket"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
later = { path = "../later/", features = ["redis", "postgres"] }

# external
rocket = { version = "0.5.0-rc.2", features = ["secrets", "tls", "json"] }
tokio = "1.20.1"
anyhow = "1.0.60"
serde = "1.0"