[package]
name = "example-rocket"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
later = { path = "../later/", features = ["redis", "postgres"] }

# external
rocket = { version = "0.5.0-rc.2", features = ["secrets", "tls", "json"] }
anyhow = "1.0.60"
serde = "1.0"

tracing = "0.1.36"
tracing-subscriber = { version = "0.3", default-features = false }
tracing-opentelemetry = "0.20.0"
opentelemetry = "0.17.0"
opentelemetry-jaeger = "0.16.0"
