[package]
name = "later-derive"
version = "0.0.1"
edition = "2021"
description = "Macro to generate stub for later: Background jobs manager and runner for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
serde_json = "1.0"