[package]
name = "later-derive"
version = "0.0.6"
edition = "2021"
description = "Macro to generate stub for later: Background jobs manager and runner for Rust"
authors = ["Mohammad Mustakim Ali <i@mustak.im>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mustakimali/later"
documentation = "https://docs.rs/later"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
