[package]
name = "later"
version = "0.0.4"
edition = "2021"
description = "Distributed Background jobs manager and runner for Rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
all = ["postgres", "redis"]
postgres = ["dep:sqlx"]
redis = ["dep:redis"]

[dependencies]
# internal
later-derive = { path = "../later-derive", version = "0.0.2"}

# external
anyhow = "1.0.58"
uuid = { version = "1.1.2", features = ["v4"] }
amiquip = { version = "0.4", default-features = false }
tokio = { version = "1.19.2", features = ["full"]}
serde = "1.0"
serde_derive = "1.0"
rmp-serde = "1.1"
chrono = { version = "0.4", features = ["serde"]}
tracing = "0.1"
async-trait = "0.1.56"
futures-core = "0.3.21"
async-recursion = "1.0"
async-mutex = "1.4"
cron = "0.11"
async-std = "1.12.0"

sqlx = { optional = true, version = "0.5", features = [ "runtime-tokio-rustls", "uuid", "chrono", "postgres", "offline" ] }
redis = { optional = true, version = "0.21", features = ["tokio-comp"] }
