[package]
name = "later"
version = "0.0.7"
edition = "2021"
description = "Distributed Background jobs manager and runner for Rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["redis"]
all = ["postgres", "redis"]
postgres = ["dep:sqlx"]
redis = ["dep:redis"]

[dependencies]
# internal
later-derive = { path = "../later-derive", version = "0.0.5"}

# external
anyhow = "1.0.60"
rusty_ulid = "1.0.0"
lapin = "2.1.1"
tokio = { version = "1.20.1", features = ["full"]}
serde = "1.0"
serde_derive = "1.0"
rmp-serde = "1.1"
chrono = { version = "0.4", features = ["serde"]}
tracing = "0.1"
async-trait = "0.1.57"
futures = "0.3.21"
futures-core = "0.3.21"
async-recursion = "1.0"
async-mutex = "1.4"
cron = "0.11"
async-std = "1.12.0"
prometheus = "0.13.1"
lazy_static = "1.4.0"
typed-builder = "0.10.0"

sqlx = { optional = true, version = "0.6", features = [ "runtime-tokio-rustls", "uuid", "chrono", "postgres", "offline" ] }
redis = { optional = true, version = "0.21", features = ["tokio-comp"] }

[dev-dependencies]
test-case = "2.2.1"