[package]
name = "later"
version = "0.0.10"
edition = "2021"
description = "Distributed Background jobs manager and runner for Rust"
authors = ["Mohammad Mustakim Ali <i@mustak.im>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mustakimali/later"
documentation = "https://docs.rs/later"
categories = ["web-programming"]

[features]
default = ["all"]
all = ["postgres", "redis", "dashboard"]
postgres = ["dep:sqlx"]
redis = ["dep:redis"]
dashboard = []

[dependencies]
# internal
later-derive = { path = "../later-derive", version = "0.0.6"}

# external
anyhow = "1.0.60"
rusty_ulid = "1.0.0"
lapin = "2.1.1"
tokio = { version = "1.24.2", features = ["full"]}
serde = "1.0"
serde_derive = "1.0"
rmp-serde = "1.1"
chrono = { version = "0.4", features = ["serde"]}
tracing = "0.1"
async-trait = "0.1.57"
futures = "0.3.23"
futures-core = "0.3.27"
async-recursion = "1.0"
async-mutex = "1.4"
cron = "0.11"
async-std = "1.12.0"
prometheus = "0.13.1"
lazy_static = "1.4.0"
typed-builder = "0.10.0"

opentelemetry = "0.17.0"
tracing-opentelemetry = "0.17.4"

sqlx = { optional = true, version = "0.6", features = [ "runtime-tokio-rustls", "uuid", "chrono", "postgres", "offline" ] }
redis = { optional = true, version = "0.21", features = ["tokio-comp"] }

[dev-dependencies]
test-case = "2.2.1"